增加热力图，路况

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,8 +20,19 @@
         android:layout_height="match_parent"
         android:clickable="true" />
     <Button
-        android:id="@+id/layerButton"
+    android:id="@+id/layerButton"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/layer" />
+    <Button
+        android:id="@+id/tmcButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/layer" />
+        android:text="路况" />
+    <Button
+        android:id="@+id/heatButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="热力图" />
+
 </android.support.constraint.ConstraintLayout>
