--- a/app/src/main/res/layout/activity_map_layer.xml
+++ b/app/src/main/res/layout/activity_map_layer.xml
@@ -5,13 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#00000000"
-    android:weightSum="2"
     tools:context=".MapLayerActivity">
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1" />
 
 </android.support.design.widget.CoordinatorLayout>
